--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   margin: 0;
   height: 100vh;
-  background-image: url('https://images.pexels.com/photos/1402787/pexels-photo-1402787.jpeg?cs=srgb&dl=pexels-vlad-alexandru-popa-1402787.jpg&fm=jpg');
+  background-image: url('https://i.pinimg.com/originals/3a/44/e2/3a44e2a49066e2a6fd4df497d098c32b.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
